--- a/learnreact2/package.json
+++ b/learnreact2/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-test-renderer": "^16.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,8 +22,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "jest": "^24.1.0"
-  }
+  ]
 }
